--- a/src/Form.css
+++ b/src/Form.css
@@ -1,13 +1,41 @@
+* {
+	font-family: 'Nunito', sans-serif;
+}
+
 .container {
+	min-width: 247px;
+	background-color: white;
+	border-radius: 1em;
+  	border: 2.5px solid black;
+	box-shadow: 5px 5px 10px black;
+	padding: 20px;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+.inside {
 	display: flex;
 	flex-wrap: wrap;
-	background: white;
-	box-shadow: 5px 5px 10px black;
-	padding: 25px;
+	padding: 10px;
 	justify-content: center;
-	position: absolute;
-	margin: auto;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	align-items: center;
+}
+
+h2 {
+	text-align: center;
+	text-shadow: .047rem .047rem .047rem black;
+}
+
+input, select {
+	width: 100%;
+	padding: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+input[type='submit'] {
+	background-color: rgba(192,192,192, .47);
+	border: 2.5px solid black;
+	border-radius: 47px;
 }
