--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,30 +1,17 @@
-* {
-	font-family: 'Nunito', sans-serif;
-}
-
-.container {
-	min-width: 247px;
-	background-color: rgba(255,255,255,0.47);
-	border-radius: 1em;
-  	border: 2.5px solid black;
-	box-shadow: 5px 5px 10px black;
-	padding: 20px;
-	position: absolute;
-	left: 50%;
-	transform: translate(-50%);
-}
-
-.inside {
+.inputs
+{
 	display: flex;
 	flex-wrap: wrap;
-	padding: 10px;
-	justify-content: center;
-	align-items: center;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
-h2 {
+h1 {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	font-size: 25px;
 	text-align: center;
-	text-shadow: .047rem .047rem .047rem black;
+	text-shadow: 1px 1px 1px black;
 }
 
 input, select {
@@ -32,14 +19,23 @@ input, select {
 	padding: 5px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	background-color: rgba(0,0,0,0);
+	border: none;
+	border-bottom: 2px solid silver;
 }
 
 input[type='submit'] {
-	background-color: rgba(192,192,192,0.47);
+	background-color: rgba(192,192,192,0.5);
 	border: 2.5px solid black;
-	border-radius: 47px;
+	border-radius: 50px;
+	width: 50%;
+	font-size: 20px;
+	font-weight: bold;
+	margin: auto;
+	margin-top: 5px;
+	display: block;
 }
 
 input[type='submit']:hover {
-	background-color: rgba(47,47,47,0.47);
+	background-color: rgba(100,100,100,0.5);
 }
