--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,6 @@
 body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-	sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background: rgb(219,80,80);
-	background: linear-gradient(90deg, rgba(219,80,80,1) 20%, rgba(173,219,80,1) 80%);
-}
+	background: #4B79A1;
+	background: -webkit-linear-gradient(to right, #283E51, #4B79A1);
+	background: linear-gradient(to right, #283E51, #4B79A1);
 
-code {
-  	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    	monospace;
 }
